--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
         <div class="container">
             <a class="navbar-brand brand fw-bold" style="font-size: 28px;" href="/">
-                DJ-<span style="color: #c0d9d9;">Aceng</span>
+                DJ-<span style="color: #c0d9d9;">Allox</span>
             </a>
             
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
