--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
   <!-- Tempat navbar akan dimuat -->
   <div id="navbar-container"></div>
 
-  <div class="memoalloc-card">
-    <h2>Contiguous Memory Allocation Simulation</h2>
+  <div class="memoalloc-card mt-5">
+    <h2>Simulasi Contiguous Memory Allocation</h2>
 
     <div class="mb-3">
-      <h5 class="mb-3">Algorithm</h5>
+      <h5 class="mb-3">Algoritma</h5>
       <select class="form-select">
         <option>First-Fit</option>
         <option>Best-Fit</option>
@@ -25,28 +25,75 @@
       </select>
     </div>
 
-    <div class="mb-2 d-flex flex-column">
-      <h5>Partitions</h5>
-      <div class="d-flex align-items-end flex-wrap">
-        <div class="partition-input">
-          <input type="number" id="size" name="size" class="form-control" placeholder="Enter Partition Size">
+    <div class="row">
+      <!-- Bagian Partitions -->
+      <div class="col-md-6 mb-4">
+        <h5>Partisi</h5>
+        <div class="d-flex align-items-end flex-wrap mb-2">
+          <div class="partition-input">
+            <input type="number" id="partitionSize" name="partitionSize" class="form-control"
+              placeholder="Enter Partition Size">
+          </div>
+          <button class="circle-btn btn-add" id="addPartition">+</button>
         </div>
-        <button class="circle-btn btn-add">+</button>
+
+        <table class="table align-middle mt-3">
+          <thead>
+            <tr>
+              <th>Nama</th>
+              <th>Ukuran (KB)</th>
+              <th>Aksi</th>
+            </tr>
+          </thead>
+          <tbody id="partitionTableBody"></tbody>
+        </table>
+      </div>
+
+      <!-- Bagian Processes -->
+      <div class="col-md-6 mb-4">
+        <h5>Proses</h5>
+        <div class="d-flex align-items-end flex-wrap mb-2">
+          <div class="partition-input">
+            <input type="number" id="processSize" name="processSize" class="form-control"
+              placeholder="Enter Process Size">
+          </div>
+          <button class="circle-btn btn-add" id="addProcess">+</button>
+        </div>
+
+        <table class="table align-middle mt-3">
+          <thead>
+            <tr>
+              <th>Nama</th>
+              <th>Ukuran (KB)</th>
+              <th>Aksi</th>
+            </tr>
+          </thead>
+          <tbody id="processTableBody"></tbody>
+        </table>
       </div>
     </div>
 
-    <table class="table align-middle mt-3">
-      <thead class="table">
+    <button class="btn btn-pink mt-3 w-100">MULAI SIMULASI</button>
+
+  </div>
+
+  <div class="result-card mt-5 d-none">
+    <h2 style="color: white;">Hasil Simulation</h2>
+    <table class="table align-middle" id="resultTable">
+      <thead>
         <tr>
-          <td>Name</td>
-          <td>Size (KB)</td>
-          <td>Action</td>
+          <th>Partisi</th>
+          <th>Ukuran Partisi (KB)</th>
+          <th>Proses</th>
+          <th>Ukuran Proses (KB)</th>
         </tr>
       </thead>
-      <tbody id="partitionTableBody"></tbody>
+      <tbody></tbody>
     </table>
 
-    <button class="btn btn-pink mt-3">START SIMULATION</button>
+    <p id="resultExplanation" class="mt-3"></p>
+
+    <button id="backButton" class="btn btn-pink mt-3">← Kembali</button>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
