--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
         <table class="table align-middle mt-3">
           <thead>
             <tr>
-              <th>Nama</th>
-              <th>Ukuran (KB)</th>
-              <th>Aksi</th>
+              <td>Nama</td>
+              <td>Ukuran (KB)</td>
+              <td>Aksi</td>
             </tr>
           </thead>
           <tbody id="partitionTableBody"></tbody>
@@ -66,9 +66,9 @@
         <table class="table align-middle mt-3">
           <thead>
             <tr>
-              <th>Nama</th>
-              <th>Ukuran (KB)</th>
-              <th>Aksi</th>
+              <td>Nama</td>
+              <td>Ukuran (KB)</td>
+              <td>Aksi</td>
             </tr>
           </thead>
           <tbody id="processTableBody"></tbody>
@@ -85,10 +85,10 @@
     <table class="table align-middle" id="resultTable">
       <thead>
         <tr>
-          <th>Partisi</th>
-          <th>Ukuran Partisi (KB)</th>
-          <th>Proses</th>
-          <th>Ukuran Proses (KB)</th>
+          <td>Partisi</td>
+          <td>Ukuran Partisi (KB)</td>
+          <td>Proses</td>
+          <td>Ukuran Proses (KB)</td>
         </tr>
       </thead>
       <tbody></tbody>
