--- a/public/latihan.html
+++ b/public/latihan.html
@@ -6,7 +6,7 @@
   <title>Latihan Final - Alokasi Memori</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -16,7 +16,6 @@
     <div class="top-row">
       <div>
         <h2 style="margin:0">Latihan Interaktif: Alokasi Memori</h2>
-        <div class="small-muted">7 soal pilihan ganda + 3 soal drag & drop</div>
       </div>
       <div style="text-align:right">
         <div class="progress-text" id="progressText">Soal 1 dari 10</div>
@@ -32,7 +31,7 @@
 
   <!-- scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/template.js"></script>
+  <script src="js/template.js"></script>
 
   <script src="js/latihan.js"></script>
 </body>
