--- a/public/materi.html
+++ b/public/materi.html
@@ -7,6 +7,19 @@
   <title>Materi Memory Allocation</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/materi.css">
+  <style>
+    section {
+      display: none;
+    }
+
+    section.active {
+      display: block;
+    }
+
+    .nav-pills .nav-link {
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body>
@@ -15,8 +28,21 @@
 
   <main class="container py-4">
 
+    <h1 class="text-center mb-4">Materi Memory Allocation</h1>
+
+    <!-- 🔹 Navigasi Sub-Page -->
+    <nav class="nav nav-pills justify-content-center mb-4 flex-wrap">
+      <button class="nav-link active" onclick="showPage('pendahuluan', event)">Pendahuluan</button>
+      <button class="nav-link" onclick="showPage('jenis', event)">Jenis</button>
+      <button class="nav-link" onclick="showPage('algoritma', event)">Algoritma</button>
+      <button class="nav-link" onclick="showPage('fragmentasi', event)">Fragmentasi</button>
+      <button class="nav-link" onclick="showPage('contoh', event)">Contoh</button>
+      <button class="nav-link" onclick="showPage('kesimpulan', event)">Kesimpulan</button>
+      <button class="nav-link" onclick="showPage('referensi', event)">Referensi</button>
+    </nav>
+
     <!-- Pendahuluan -->
-    <section id="pendahuluan" class="mb-5">
+    <section id="pendahuluan" class="active mb-5">
       <h2>1. Pengertian dan Tujuan</h2>
       <p>
         <b>Manajemen Memori</b> adalah komponen sistem operasi yang memastikan sumber daya memori utama
@@ -25,9 +51,7 @@
         Karena kapasitas memori terbatas, sistem operasi bertugas mengatur peletakan proses agar CPU selalu
         memiliki proses untuk dijalankan tanpa membuang sumber daya.
       </p>
-      <p>
-        Tujuan utama manajemen memori adalah:
-      </p>
+      <p>Tujuan utama manajemen memori adalah:</p>
       <ul>
         <li><b>Memory Allocation & Deallocation</b>: Mengalokasikan memori untuk proses saat diperlukan dan
           melepaskannya saat sudah tidak digunakan.</li>
@@ -116,14 +140,12 @@
         <tbody>
           <tr>
             <td><b>Internal Fragmentation</b></td>
-            <td>Terjadi ketika blok memori yang dialokasikan lebih besar dari kebutuhan proses, menyisakan
-              ruang tidak terpakai di dalam blok tersebut.</td>
+            <td>Terjadi ketika blok memori yang dialokasikan lebih besar dari kebutuhan proses.</td>
             <td>Fixed Partitioning</td>
           </tr>
           <tr>
             <td><b>External Fragmentation</b></td>
-            <td>Terjadi ketika ruang kosong tersebar di antara blok-blok yang terisi, sehingga total ruang cukup
-              tetapi tidak bersebelahan untuk proses baru.</td>
+            <td>Terjadi ketika ruang kosong tersebar di antara blok-blok yang terisi.</td>
             <td>Variable Partitioning</td>
           </tr>
         </tbody>
@@ -143,19 +165,10 @@
       </p>
       <p><b>Tugas:</b> Tentukan hasil alokasi dengan algoritma First-Fit, Best-Fit, dan Worst-Fit.</p>
       <ul>
-        <li>
-          <b>First-Fit:</b> proses ditempatkan di blok kosong pertama yang cukup besar.
-        </li>
-        <li>
-          <b>Best-Fit:</b> memilih blok dengan sisa paling kecil setelah alokasi.
-        </li>
-        <li>
-          <b>Worst-Fit:</b> memilih blok terbesar untuk setiap proses.
-        </li>
+        <li><b>First-Fit:</b> proses ditempatkan di blok kosong pertama yang cukup besar.</li>
+        <li><b>Best-Fit:</b> memilih blok dengan sisa paling kecil setelah alokasi.</li>
+        <li><b>Worst-Fit:</b> memilih blok terbesar untuk setiap proses.</li>
       </ul>
-      <p>
-        Setelah alokasi selesai, bandingkan sisa memori kosong untuk menentukan efisiensi masing-masing algoritma.
-      </p>
     </section>
 
     <!-- Kesimpulan -->
@@ -166,7 +179,6 @@
         <li><b>Masalah umum:</b> fragmentasi internal & eksternal.</li>
         <li><b>Solusi modern:</b> teknik <b>paging</b> dan <b>segmentation</b> memungkinkan proses ditempatkan
           tidak bersebelahan untuk memaksimalkan penggunaan memori.</li>
-        <li><b>Efisiensi sistem:</b> bergantung pada algoritma alokasi dan mekanisme manajemen memori yang digunakan.</li>
       </ul>
     </section>
 
@@ -174,10 +186,8 @@
     <section id="referensi" class="mb-5">
       <h2>7. Referensi</h2>
       <ul>
-        <li><b>Week 7</b> – Manajemen Memori (6 Oktober 2025). Materi: Main memory, logical & physical address,
-          static vs dynamic loading, contiguous & non-contiguous allocation.</li>
-        <li><b>Week 9</b> – Contiguous Memory Allocation (17 Oktober 2025). Materi: Variable partitioning,
-          algoritma First-Fit, Best-Fit, Worst-Fit.</li>
+        <li><b>Week 7</b> – Manajemen Memori (6 Oktober 2025).</li>
+        <li><b>Week 9</b> – Contiguous Memory Allocation (17 Oktober 2025).</li>
       </ul>
     </section>
 
@@ -185,6 +195,18 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/js/template.js"></script>
-  <script src="js/script.js"></script>
+  <script>
+    function showPage(id, event) {
+      // sembunyikan semua section
+      document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
+      // tampilkan section yang dipilih
+      document.getElementById(id).classList.add('active');
+      // atur tombol aktif
+      document.querySelectorAll('.nav-link').forEach(btn => btn.classList.remove('active'));
+      event.target.classList.add('active');
+      // scroll ke atas setiap kali pindah halaman
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+  </script>
 </body>
 </html>
