--- a/public/materi.html
+++ b/public/materi.html
@@ -195,7 +195,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../assets/js/template.js"></script>
-<script src="js/script.js"></script>
+<script src="js/materi.js"></script>
+
 
 </body>
 </html>
