--- a/public/materi.html
+++ b/public/materi.html
@@ -240,7 +240,7 @@
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/template.js"></script>
+  <script src="js/template.js"></script>
   <script src="js/materi.js"></script>
 </body>
 </html>
